--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,6 +4,7 @@
     "hostRequirements": {
         "cpus": 4
     },
+    "runArgs": [ "--cap-add=SYS_PTRACE", "--security-opt", "seccomp=unconfined", "--network", "host", "--privileged" ],
     "customizations": {
         "vscode": {
             "settings": {
@@ -23,7 +24,8 @@
                 "mads-hartmann.bash-ide-vscode",
                 "johnstoncode.svn-scm",
                 "ms-vscode.cpptools",
-                "MS-vsliveshare.vsliveshare"
+                "MS-vsliveshare.vsliveshare",
+                "vadimcn.vscode-lldb"
             ]
         }
     },
